# LearningCPP

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  app.cpp  conanfile.py  justfile  main.cpp
cmake_utils/cmake_config/: CompilerFlags.cmake
cmake_utils/cmake_functions/: CoverageFunctions.cmake  StaticAnalyzersFunctions.cmake  UtilityFunctions.cmake
include/: work.hpp
mocks/: mocks.hpp
modules/: CMakeLists.txt  error.ixx  math.ixx  work.ixx  work2.ixx
source/: CMakeLists.txt  work.cpp
tests/: CMakeLists.txt  app_tests.cpp  tests.cpp
